# startingone

./: app.py  app_new.py  config.py  custom.css  eda.py  excel_to_db.py  main.py  new.css  new_style.css  prompt.py  temp.py
api/: pyproject.toml
api/attached_assets/: Pasted-import-os-from-pathlib-import-Path-import-streamlit-as-st-import-yaml-from-utils-helper-import-1742451880370.txt
api/backend/api/: routes.py
api/backend/database/: database_process.py  get_summary_table.py  get_top_contributors.py
api/backend/llm/: chatbot.py  reson_code.py
api/backend/utils/: helper.py  ppt_export.py
api/config/: config.yaml
api/frontend/utils/: api_client.py
bot/: exceptions.py  logger_config.py  main.py  sql_chain.py
config/: config.yaml
src/: db_operations.py  extract_data.py  processing.py  utils.py
templates/: template_manager.py
version0/backend/: app.py
version0/frontend/: streamlit_app.py
version1/: Readme.MD  docker-compose.yml
version1/api/: client.py
version1/backend/: Dockerfile  server.py
version1/frontend/: Dockerfile  app.py
version2/: config.json
version2/attached_assets/: Pasted-I-want-to-build-a-webapp-with-following-workflow-I-will-first-explain-you-the-expected-flow-and-th-1742731353340.txt
version2/templates/: base.html  index.html
version3/: app.py  config.json
version3/attached_assets/: Pasted--DOCTYPE-html-html-lang-en-data-bs-theme-dark-head-meta-charset-UTF-8-met-1742742012238.txt  Pasted--Main-styles-for-the-application-Card-styling-with-rounded-corners-card-trans-1742742003237.txt
version3/data/: __init__.py  (+1 more)
(+14 files in other folders)
